--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   ],
   "peerDependencies": {
     "axe-core": "^3.1.2",
-    "cypress": "^3.1.1"
+    "cypress": "^3.1.1",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.18.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "mochawesome": "^3.1.1",
+    "mochawesome-merge": "^1.0.5"
   },
   "author": "Andy Van Slaars",
   "contributors": [
