--- a/package.json
+++ b/package.json
@@ -15,12 +15,7 @@
   ],
   "peerDependencies": {
     "axe-core": "^3.1.2",
-    "cypress": "^3.1.1",
-    "mocha": "^5.2.0",
-    "mocha-junit-reporter": "^1.18.0",
-    "mocha-multi-reporters": "^1.1.7",
-    "mochawesome": "^3.1.1",
-    "mochawesome-merge": "^1.0.5"
+    "cypress": "^3.1.1"
   },
   "author": "Andy Van Slaars",
   "contributors": [
@@ -34,7 +29,10 @@
   "devDependencies": {
     "axe-core": "^3.1.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mocha": "5.2.0",
+    "mochawesome": "3.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/avanslaars/cypress-axe.git"
