--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
   "devDependencies": {
     "axe-core": "^3.1.2"
   },
-  "dependencies": {
-    "mocha": "5.2.0",
-    "mochawesome": "3.1.1"
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/avanslaars/cypress-axe.git"
